--- a/src/sass/components/_set-goals.scss
+++ b/src/sass/components/_set-goals.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
 
   &__header-container{
-    margin-top: 5rem;
+    margin: 5rem -5rem 0 0;
     display: flex;
     align-self: center;
     justify-content: center;
